--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@ const arr3 = arr.concat(false ? [4] : [5]); // [1, 2, 3, 5]</code></pre>
 		<section>
 			<section>
 				<img src="./images/analyzer.jpg" width="700">
-				<h2>Chunks</h2>
+				<h2>Common Chunk(s)</h2>
 			</section>
 			<section>
         <pre><code class="js">plugins: [new webpack.optimize.CommonsChunkPlugin(options)]</code></pre>
