--- a/index.html
+++ b/index.html
@@ -933,7 +933,7 @@ const arr3 = arr.concat(false ? [4] : [5]); // [1, 2, 3, 5]</code></pre>
 				<h2>Du bi dinle</h2>
 			</section>
 			<section>
-				<pre><code class="js">target: "web" | "webworker" | "node" | "async-node" | "node-webkit" | "electron" | "electron-renderer"</code></pre>
+				<pre><code class="js">target: "web" | "webworker" | "node" | "async-node" | "node-webkit" | "electron-main" | "electron-renderer"</code></pre>
 				<pre><code class="js">bail: true | false</code></pre>
 				<div class="fragment">
 					<pre><code class="js">module: {
@@ -1016,6 +1016,7 @@ const arr3 = arr.concat(false ? [4] : [5]); // [1, 2, 3, 5]</code></pre>
 				<ul>
 					<li><a href="https://survivejs.com/webpack/introduction/">surviveJS</a></li>
 					<li><a href="https://github.com/webpack-contrib/awesome-webpack">github/awesome-webpack</a></li>
+					<li><a href="https://github.com/webpack/webpack/tree/master/examples">examples @ github repo</a></li>
 					<li><a href="https://webpack.js.org/loaders/">docs/loaders</a> - <a href="https://github.com/webpack/docs/wiki/list-of-loaders">wiki/loaders</a></li>
 					<li><a href="https://webpack.js.org/plugins/">docs/plugins</a> - <a href="https://github.com/webpack/docs/wiki/list-of-plugins">wiki/plugins</a></li>
 					<li><a href="https://webpack.land/">webpack land</a></li>
